# cuddly-fiesta

./: .dockerignore  .flake8  .gitignore  AGENTS.md  Dockerfile  GEMINI.md  LICENSE  README.md  README_CONSOLIDATED.md  build_zipapp.sh  bundle.sh  bundle_fixed.sh  clinical_validator.py  ecg_animation.py  ecg_baseline.py  ecg_core.py  ekg_ui.py  grid_constants.py  lightweight_ecg_workstation.html  multi_lead.py  p_wave_generator.py  p_wave_summary.py  pyproject.toml  qodana.sarif.json  qodana.yaml  requirements.txt  run.py  run_demo.py  run_manual.py  run_visualizer.py  setup.py  test_fixed_visualizer.py  test_p_wave_fixes.py  verify_improvements.py  waveform_segments.py
.codex/environments/: environment.toml
.github/workflows/: python-app.yml
.playwright-mcp/: page-2026-05-14T00-32-48-006Z.yml  page-2026-05-14T00-33-39-991Z.yml  page-2026-05-14T00-33-58-172Z.yml  page-2026-05-14T00-34-07-535Z.yml  page-2026-05-14T00-36-38-833Z.yml  page-2026-05-14T00-36-53-858Z.yml
cuddly_fiesta/: __init__.py  __main__.py  advanced_lead_demo.py  agents.py  cardiac_vector.py  clinical_validator.py  cpp_backend.cpp  ecg_animation.py  ecg_baseline.py  ecg_core.py  ecg_visualizer.py  ecg_visualizer_fixed.py  ekg_ui.py  grid_constants.py  multi_lead.py  p_wave_generator.py  p_wave_summary.py  path_utils.py  ui_registry.py  verify_improvements.py  waveform_segments.py
cuddly_fiesta/cli/: __init__.py  main.py  rhythm_commands.py
cuddly_fiesta/core/: __init__.py  arrhythmia_pattern.py  clinical_validator.py  ecg_baseline.py  ecg_core.py  grid_scaling.py  multi_lead.py  waveform_segment.py
cuddly_fiesta/demos/: agents.py  ecg_animation.py
cuddly_fiesta/gui/: ekg_ui.py
cuddly_fiesta/rhythms/: __init__.py  asystole.py  atrial_fibrillation.py  atrial_flutter.py  base.py  bundle_branch_block.py  first_degree_av_block.py  multifocal_atrial_tachycardia.py  normal_sinus.py  sinus_bradycardia.py  sinus_tachycardia.py  supraventricular_tachycardia.py  third_degree_av_block.py  torsades_de_pointes.py  ventricular_fibrillation.py  ventricular_tachycardia.py  (+2 more)
ecg_generator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_advanced_segments.py  test_agents.py  test_core_interfaces.py  test_ecg_additional.py  test_lead_features.py  test_morphology.py  test_p_wave_fixes.py  test_ui_interface.py  test_waveform_segments.py
(+7 files in other folders)
