[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ecg-generator"
version = "0.1.0"
description = "Modular ECG waveform generator"
readme = "README.md"
authors = [
    {name = "Unknown"}
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.21.0",
    "matplotlib>=3.5.0",
    "scipy>=1.7.0",
]

[project.scripts]
ecg-core-demo = "cuddly_fiesta.ecg_core:main"
p-wave-generator = "cuddly_fiesta.p_wave_generator:main"
verify-improvements = "cuddly_fiesta.verify_improvements:main"
p-wave-summary = "cuddly_fiesta.p_wave_summary:print_p_wave_summary"
ecg-multilead-demo = "cuddly_fiesta.multi_lead:main"
ecg-animate = "cuddly_fiesta.ecg_animation:main"
ecg-gui = "cuddly_fiesta.gui.ekg_ui:main"

[tool.setuptools]
packages = ["cuddly_fiesta"]
