[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ecg-generator"
version = "0.1.0"
description = "Modular ECG waveform generator"
readme = "README.md"
authors = [
    {name = "Unknown"}
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.21.0",
    "matplotlib>=3.5.0",
    "scipy>=1.7.0",
]

[project.scripts]
ecg-generator = "cuddly_fiesta.__main__:main"
ecg-multilead-demo = "cuddly_fiesta.core.multi_lead:main"
ecg-gui = "cuddly_fiesta.ecg_visualizer:run_visualizer"
ecg-visualizer = "cuddly_fiesta.ecg_visualizer:run_visualizer"

[tool.setuptools.packages.find]
include = ["cuddly_fiesta*"]
